<resources>
    <string name="app_name">FoodDeliveryAPP_Concept</string>
    <string name="settings">Settings</string>
    <string name="restaurants">Restaurants</string>
    <string name="order">Order</string>
    <string name="search_your_restaurant_by_name">Search your restaurant by name</string>
    <string name="select_store">Select Store</string>
    <string name="line">_________________________________________</string>
</resources>
