<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_skip"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.skipthedishes.skipthedishesfooddelivery.MainActivity">


    <Button
        android:id="@+id/buttonSettingId"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/background_skip"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/restaurants"
        android:textAlignment="center"
        android:textColor="#030303"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSettingId"
        android:layout_centerHorizontal="true"
        android:text="@string/line"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editTextSearchingId"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:autofillHints=""
        android:background="#b0a6a6"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="@string/search_your_restaurant_by_name"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonOrderMainId"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextSearchingId"
        android:layout_alignRight="@+id/editTextSearchingId"
        android:layout_below="@+id/textView4"
        android:background="@color/background_skip"
        android:text="@string/order" />

    <ListView
        android:id="@+id/listViewStoreId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_below="@+id/editTextSearchingId"
        android:layout_marginTop="14dp" />


</RelativeLayout>
